// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm Should render authorization error message 1`] = `
<form
  action="#"
  className="sign-in__form"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="sign-in__message"
  >
    <p>
      We can’t recognize this email and password combination. Please try again.
    </p>
  </div>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-email"
        name="user-email"
        onChange={[Function]}
        placeholder="Email address"
        type="email"
        value=""
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-password"
        name="user-password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;

exports[`LoginForm Should render correctly 1`] = `
<form
  action="#"
  className="sign-in__form"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-email"
        name="user-email"
        onChange={[Function]}
        placeholder="Email address"
        type="email"
        value=""
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-password"
        name="user-password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;
